--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Dog CEO</h1>
+    <h1 id="kimh1">Dog CEO</h1>
 
     <div id="dog-image-container">
       <!-- images here -->
@@ -15,6 +16,7 @@
     <hr>
     <label for="select-breed">Filter Breeds That Start with:</label>
     <select id="breed-dropdown" name="select-breed">
+      <select  id="breed-dropdown" name="select-breed">
       <option value="a">a</option>
       <option value="b">b</option>
       <option value="c">c</option>
